--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,10 @@
 @mixin buttonIcon {
   font-size: 14px;
   margin-right:8px;
+  @media screen and (max-width: 480px) {
+    margin-right: 4px;
+    font-size: 12px;
+}
 }
 
 @mixin buttonInnerText {
@@ -19,8 +23,11 @@
 }
 
 @mixin columnProperty {
-  min-width: 272px;
+  width: 272px;
   padding: 10px 15px;
+  @media screen and (max-width: 480px) {
+    min-width: 200px;
+}
 }
 
 @mixin textarea {
@@ -41,6 +48,11 @@
       border-radius: 3px;
       font-weight: bold;
       padding: 8px;
+      @media screen and (max-width: 480px) {
+        padding: 4px;
+        font-size: 14px;
+        margin-top: 10px;
+    }
 }
 
 @mixin form {
@@ -136,10 +148,13 @@ code {
   background:  #DFE3E6;
   cursor: pointer;
   &-icon{
-     @include buttonIcon;
+    @include buttonIcon;
   }
   &-innerText{
       @include buttonInnerText;
+      @media screen and (max-width: 480px) {
+        font-size: 13px;
+    }
   }
 }
 
@@ -155,6 +170,9 @@ code {
   }
   &-innerText{
     @include buttonInnerText;
+    @media screen and (max-width: 480px) {
+      font-size: 14px;
+  }
   }
 }
 
@@ -216,6 +234,9 @@ code {
     padding: 20px;
     margin-top: 100px;
     background-color: rgba(236, 236, 236, 0.2);
+    @media screen and (max-width: 480px) {
+      width: 250px;
+  }
   }
   .title{
     color: white;
